# swift-spec

./: .gitignore  Makefile  README.md  configure.ac
src/: Makefile.am  swift-spec.in
